--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <figure class="avatar-box">
           <!-- <img src="./assets/images/my-avatar.png" alt="Abdul Mukmin" width="80"> -->
-          <img src="C:\Users\mukmi\OneDrive\Desktop\portfolio intern\website mukmin\assets\images\profiepic.png" style="background-color: var(--eerie-black-2);" alt="Abdul Mukmin" width="80">
+          <img src="assets/images/profiepic.png" style="background-color: var(--eerie-black-2);" alt="Abdul Mukmin" width="80">
         </figure>
 
         <div class="info-content">
