--- a/index.html
+++ b/index.html
@@ -926,6 +926,21 @@
               </a>
             </li>
 
+             <li class="project-item  active" data-filter-item="" data-category="web design">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline" role="img" class="md hydrated" aria-label="eye outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Spotify Redesign.png" alt="fundo" loading="lazy">
+                </figure>
+
+
+              </a>
+            </li>
+
             
 
            
