--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
                     <ion-icon name="eye-outline" role="img" class="md hydrated" aria-label="eye outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Spotify Redesign.png" alt="fundo" loading="lazy">
+                  <img src="./assets/images/sdv.png" alt="fundo" loading="lazy">
                 </figure>
 
 
